--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "test": "jest"
+    "test": "set NODE_ENV=test&&jest --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -26,9 +26,11 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/supertest": "^2.0.10",
     "@types/node": "^14.14.35",
     "@types/uuid": "^8.3.0",
     "ts-jest": "^27.1.3",
+    "supertest": "^6.1.3",
     "jest": "^27.4.7",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
